--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </section>
                 
                 <section id="joinusSecction" class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3 col-md-8 col-md-offset-2 text-center" style="padding:12vh;">
-                    <p class="text-center" ><span class="text16"><b>Boost your child's education with Yogome Fun Learning only for 5.99 per month.<br> Join us now! Boost your child's learning only for 5.99 per month. </b></span></p>
+                    <p class="text-center" ><span class="text16">Boost your child's education with Yogome Fun Learning only for 5.99 per month.<br> Join us now! Boost your child's learning only for 5.99 per month. </span></p>
                     <div id="JoinUs" class="html5Games btn btn-orange text-center center-block btn-mixpanel-payments">
                      <div class="text40">Join us now!</div>
                             </div>
@@ -218,7 +218,7 @@
                           </div>
                           <div class="video-title-container">
                             <p class="video-title">
-                              <span class="text38"> Yogome</span> <span class="text33">video</span>
+                              <span class="text38"> YOGOME</span> <span class="text33">video</span>
                             </p>
                           </div>
                       </div>
