ajuste en la posición de la flecha para recorrer los libros

--- a/yogobooks.html
+++ b/yogobooks.html
@@ -203,7 +203,7 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                         </div>
                         
                         <div onclick="flipcard.play()" id="nextButton" class="responsiveGallery-btn_next">
-                        <img  class="img-responsive" src="assets/images/books/BotonBooksNext.png">
+                        <img  class="img-responsive" style="transform: translateX(-30px)" src="assets/images/books/BotonBooksNext.png">
                         </div>
                     </div>                
                 
