--- a/webisodes.html
+++ b/webisodes.html
@@ -192,7 +192,7 @@
                           <div id="videoContainer" class="embed-responsive embed-responsive-16by9">
                               <div class="videos-new-banner">
                             <img class="img-responsive" src="assets/images/newflag.png" />
-                                  <div class="textNew">Nuevo</div>
+                                  <div class="textNew"><span class="text52">Nuevo</span></div>
                           </div>
                                 <div id="player"></div>
                           </div>
