--- a/letsplay.html
+++ b/letsplay.html
@@ -178,11 +178,11 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                             <p class="text-center main-title"><span class="text18">LET´S PLAY!</span></p>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 text-center">
+                        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-8 col-md-offset-2 col-xlg-10 col-xlg-offset-1  text-center">
                             <p class="text-center secondsub-title"><span class="text19">Choose your favorite subject</span></p>
                         </div>
                         <div class="row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                                 
                         <div onclick="flipcard.play()" class="slick-nav-buttons slick-buttons override-buttons"></div>
                                     <div id="subject-slider">
