--- a/letsplay.html
+++ b/letsplay.html
@@ -36,7 +36,7 @@
  gtag('config', 'UA-64907347-1');
 </script>
     
-<body>
+<body  id="backGround">
     
     <audio preload="auto" id="pop"  src="assets/sounds/pop.mp3"></audio>
     <audio preload="auto" id="flipcard"  src="assets/sounds/flipcard.mp3"></audio>
@@ -197,7 +197,7 @@
 
             <section id="tab-minigames">
                 <div id="minigamesContainer" class="container">
-                    <div id="nameSubject" class="">
+                    <div id="nameSubject">
                         <p class="second-title text-center">
                             <span class="text39">All subjects</span>
                         </p>
@@ -208,7 +208,7 @@
 
             </section>
             <footer>
-                <div class="container">
+                <div class="container"  id="backGround">
                     <div class="col-xs-12 play-footer">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
