--- a/letsplay.html
+++ b/letsplay.html
@@ -212,9 +212,10 @@
                     <div class="col-xs-12 play-footer">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
-                        <p>Read our
-                            <a href="http://yogome.com/en/privacy/" target="_blank">Privacy policy </a>and
-                            <a href="http://yogome.com/en/privacy/" target="_blank">Terms of service.</a></p>
+                        <p><span class="text47">Read our </span>
+                            <a href="http://yogome.com/en/privacy/" class="mixpanel-call text48" target="_blank">Privacy policy </a>
+                            <span class="text49"> and </span>
+                            <a href="http://yogome.com/en/privacy/" class="mixpanel-call text50" target="_blank"> Terms of service.</a></p>
                     </div>
                 </div>
             </footer>
