--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                                 <span class="text43">video</span>
                             </p>
                           </div>
+                          <img class="img-planeta" src="assets/images/img-our-apps-planet.png" />
                       </div>
                     </div>
                     <div class="separator1"></div>
