--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </section>
 
                 <section id="play-section-videos">
-                  <div class="container">
+                  <div class="container" id="backGround">
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="shadow-ray">
@@ -228,9 +228,10 @@
                           </div>
                           <div class="video-title-container">
                             <p class="video-title">
-                              <span class="text38"> YOGOME</span> <span class="text33">video</span>
+                                <span class="text43">video</span>
                             </p>
                           </div>
+                          <img class="img-planeta" src="assets/images/img-our-apps-planet.png" />
                       </div>
                     </div>
                     <div class="separator1"></div>
