--- a/yogobooks.html
+++ b/yogobooks.html
@@ -245,7 +245,8 @@ $('.responsiveGallery-wrapper').responsiveGallery({
 
     <!-- jQuery Nicescroll CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
-    
+       <script src="assets/js/play.js"></script>
+
     
     <script src="js/mixpanel/mixpanel.js"></script>
     <script src="js/mixpanel/yogobooks.js"></script>
