videos page title fix

--- a/webisodes.html
+++ b/webisodes.html
@@ -183,8 +183,11 @@
 -->
             <div class="bg-zip">
                 <div id="title-videos">
-                    <img src="assets/images/title_videos.png" relativestyle="" style=" position: absolute; display: block; left:26%; width: 50%;"/>
-                    <div class="title-image" style="position:relative; left: 35%; width:30%; padding-top:2% " >
+                  <div style=" position: absolute; display: block; width: 100%; padding-top: 2%">
+                    <img src="assets/images/title_videos.png" relativestyle="" / >
+                  </div>
+                    
+                    <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.5% " >
                         <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%"/>
                         <img id="videoName" src="assets/images/videos_ES.png" style="display: inline-block; top:16%; width:40%"/>
                     </div>
