cambio en estilo de titulo "All subjects"

--- a/letsplay.html
+++ b/letsplay.html
@@ -197,8 +197,8 @@
 
             <section id="tab-minigames">
                 <div id="minigamesContainer" class="container">
-                    <div id="nameSubject">
-                        <p class="second-title text-center">
+                    <div style="font-size: 2vh;">
+                        <p class="title-purple">
                             <span class="text39">All subjects</span>
                         </p>
                     </div>
