--- a/letsplay.html
+++ b/letsplay.html
@@ -197,8 +197,8 @@
 
             <section id="tab-minigames">
                 <div id="minigamesContainer" class="container">
-                    <div style="font-size: 2vh;">
-                        <p class="title-purple">
+                    <div id="nameSubject" style="font-size: 2vh;">
+                        <p class="title-purple" style="background-image: url('assets/images/pinkandblue.png') !important">
                             <span class="text39">All subjects</span>
                         </p>
                     </div>
