seccion de juegos centrada y efecto de navbar-btn: hover

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="title-purple">
                         <div class="text58">GAMES</div>
                     </div>
-                  <div id="container-html5games" class="container container-webgames">
+                  <div id="container-html5games" class="container container-webgames" style="width: 80% !important;">
                       <!--Juegos HTML5-->
                       
                    <!--Juegos HTML5-->
