--- a/webisodes.html
+++ b/webisodes.html
@@ -189,22 +189,22 @@
                     
                     <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.5% " >
                         <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%"/>
-                        <img id="videoName" src="assets/images/videos_ES.png" style="display: inline-block; top:16%; width:40%"/>
+                        <img id="videoName" src="" style="display: inline-block; top:16%; width:40%; max-height: 5vh"/>
                     </div>
                 </div>
             <section  class="container-fluid bg-webisodes-main webPageSection">
                     <div class="row">
-                      <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2"  style="margin-top:5%;">
+                      <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 video-size"  style="margin-top:5%;">
                           
                           <div id="videoContainer" class="embed-responsive embed-responsive-16by9">
                               <div class="videos-new-banner">
-                            <img class="img-responsive" src="assets/images/newflag.png" />
+                            <img class="img-responsive" src="assets/images/newflag.png" style="transform: rotateY(180deg)"/>
                                   <div class="textNew"><span class="text52">Nuevo</span></div>
                           </div>
                                 <div id="player"></div>
                           </div>
                           <div class="title-name-video">
-                              <span class="text43">Video</span>
+                              <span class="text60">Más videos:</span>
                           </div>
                       </div>
                     </div>
@@ -289,7 +289,6 @@ function getParameterByName(name, url) {
   function setVideoImage(){
       var name = "assets/images/videos_"+language+".png";
       $("#videoName").attr("src",name);
-
     }
 
     setVideoImage();
