video_con segundo ajuste

--- a/webisodes.html
+++ b/webisodes.html
@@ -188,8 +188,9 @@
                   </div>
                     
                     <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.5% " >
-                        <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%; max-width: 28vh; max-height: 8vh;"/>
-                        <img id="videoName" src="" style="display: inline-block; top:16%; width:40%; max-height: 5vh"/>
+                        <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%; max-width: 20vh; max-height: 8vh;"/>
+                        <div>
+                        <img id="videoName" src="" style="display: inline-block; top:15%; width:40%; max-height: 4vh; max-width: 16vh"/></div>
                     </div>
                 </div>
             <section  class="container-fluid bg-webisodes-main webPageSection">
