ajuste en new_banner image

--- a/webisodes.html
+++ b/webisodes.html
@@ -196,12 +196,12 @@
             <section  class="container-fluid bg-webisodes-main webPageSection">
                     <div class="row">
                       <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 video-size"  style="margin-top:5%;">
-                          
-                          <div id="videoContainer" class="embed-responsive embed-responsive-16by9">
-                              <div class="videos-new-banner">
+                          <div class="videos-new-banner-yellow">
                             <img class="img-responsive" src="assets/images/newflag.png" style="transform: rotateY(180deg)"/>
                                   <div class="textNew"><span class="text52">Nuevo</span></div>
                           </div>
+                          <div id="videoContainer" class="embed-responsive embed-responsive-16by9">
+                              
                                 <div id="player"></div>
                           </div>
                           <div class="title-name-video">
