--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                     <div class="row">
                       <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
                           <div class="videos-new-banner">
-                            <img class="img-responsive" src="assets/images/new_green.png" />
-                            <p class="text52" id="NewText"></p>
+                            <img class="img-responsive" src="assets/images/new_green.png" style="transform: rotateZ(90deg)"/>
+                            <p class="text52" id="NewText" style="transform: rotateZ(45deg)"></p>
                           </div>
                           <div class="embed-responsive embed-responsive-16by9">
                               <!-- Youtube API: The <iframe> (and video player) will replace this <div> tag. Code in mixpanel.js-->
