--- a/webisodes.html
+++ b/webisodes.html
@@ -198,7 +198,7 @@
                       <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 video-size"  style="margin-top:5%;">
                           <div class="videos-new-banner-yellow">
                             <img class="img-responsive" src="assets/images/newflag.png" style="transform: rotateY(180deg);"/>
-                                  <div class="textNew" style="width: 2.5vw; min-width: 1vh;"><span class="text52">Nuevo</span></div>
+                                  <div class="textNew"><span class="text52">Nuevo</span></div>
                           </div>
                           <div id="videoContainer" class="embed-responsive embed-responsive-16by9">
                               
