logo yogome y videos title

--- a/webisodes.html
+++ b/webisodes.html
@@ -187,10 +187,10 @@
                     <img src="assets/images/title_videos.png" relativestyle="" / >
                   </div>
                     
-                    <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.5% " >
-                        <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%; max-width: 20vh; max-height: 8vh;"/>
-                        <div>
-                        <img id="videoName" src="" style="display: inline-block; top:15%; width:40%; max-height: 4vh; max-width: 16vh"/></div>
+                    <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.1%;" >
+                        <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%; max-width: 20vh; max-height: 8vh; "/>
+                        <div style="height: 5vh;">
+                        <img id="videoName" src=" heigth:100%; max-height: 5vh; max-width: 16vh"/></div>
                     </div>
                 </div>
             <section  class="container-fluid bg-webisodes-main webPageSection">
@@ -213,9 +213,9 @@
 
             <section >
 
-                <div class="mid-conatiner col-xs-6 col-xs-offset-3 col-sm-8 col-sm-offset-2">
+                <div class="mid-conatiner col-xs-6 col-xs-offset-3 col-sm-8 col-sm-offset-2" >
                     <div class="slick-nav-buttons"></div>
-                        <div class="col-xs-12">
+                        <div class="col-xs-15">
                             <div id="wallpaper-slider">
                             </div>
                         </div>
