https fixes for web yogome

--- a/letsplay.html
+++ b/letsplay.html
@@ -194,7 +194,7 @@
         </section>
 
         <section id="tab-minigames">
-            <div id="minigamesContainer" class="container">
+            <div id="minigamesContainer">
                 <div id="nameSubject">
                     <p class="title-purple" style="background-image: url('assets/images/pinkandblue.png') !important">
                         <span class="text39">All subjects</span>
