--- a/yogobooks.html
+++ b/yogobooks.html
@@ -226,9 +226,9 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                         <img class="img img-responsive footer-logo" src="assets/images/logo-yogome.png" alt="Logo Yogome">
                         <img class="img img-responsive footer-logo" src="assets/images/logo-student-safe.png" alt="Logo Student Safe">
                         <p><span class="text47">Read our </span>
-                            <a href="http://yogome.com/en/privacy/" class="mixpanel-call text48" target="_blank">Privacy policy </a>
+                            <a href="https://yogome.com/en/privacy/" class="mixpanel-call text48" target="_blank">Privacy policy </a>
                             <span class="text49"> and </span>
-                            <a href="http://yogome.com/en/privacy/" class="mixpanel-call text50" target="_blank"> Terms of service.</a></p>
+                            <a href="https://yogome.com/en/privacy/" class="mixpanel-call text50" target="_blank"> Terms of service.</a></p>
                     </div>
                 </div>
             </footer>
