--- a/webisodes.html
+++ b/webisodes.html
@@ -23,7 +23,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="assets/js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="js/epic/data/epicYogomeGames.js" type="text/javascript"></script>
     <script src="epicweb/shared/minigames/js/helpers/yogomeGames.js" type="text/javascript"></script>
     <script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflS50iB-/www-widgetapi.js" async=""></script>
 <script src="https://www.youtube.com/iframe_api"></script>
@@ -190,7 +189,7 @@
                     <div class="title-image" style="position:relative; left: 37%; width:25%; padding-top:3.1%;" >
                         <img src="assets/images/logo-yogome.png" style="display: inline-block; width:60%; max-width: 20vh; max-height: 8vh; "/>
                         <div style="height: 5vh;">
-                        <img id="videoName" src=" heigth:100%; max-height: 5vh; max-width: 16vh"/></div>
+                        <img id="videoName" style=" heigth:100%; max-height: 5vh; max-width: 16vh"/></div>
                     </div>
                 </div>
             <section  class="container-fluid bg-webisodes-main webPageSection">
@@ -253,7 +252,7 @@
        
     <!-- jQuery Nicescroll CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
-    <script src="assets/js/yogofun.js"></script>
+    <!--<script src="assets/js/yogofun.js"></script>-->
     <script src="assets/js/language.js"></script>
 
     <!-- Mixpanel -->
