--- a/webisodes.html
+++ b/webisodes.html
@@ -243,6 +243,7 @@
     <div id="myModal"></div>
     </body> 
 <!--MODAL    -->
+    <script src="assets/js/letsplay/letsplay.js"></script>
     <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
     <script src="js/modal.js"></script>
