play.yogome login detail fixes in each section. logo sends to home except in home

--- a/login.html
+++ b/login.html
@@ -66,10 +66,10 @@
 </head>
 <body>
     
-    <audio preload="auto" id="pop"  src="sounds/pop.mp3"></audio>
-    <audio preload="auto" id="cut"  src="sounds/cut.mp3"></audio>
-    <audio preload="auto" id="magic" src="sounds/magic.mp3"></audio>
-    <audio preload="auto" id="cheers" src="sounds/cheers.mp3"></audio>
+    <audio preload="auto" id="pop"  src="assets/sounds/pop.mp3"></audio>
+    <audio preload="auto" id="cut"  src="assets/sounds/cut.mp3"></audio>
+    <!--<audio preload="auto" id="magic" src="assets/sounds/magic.mp3"></audio>-->
+    <audio preload="auto" id="cheers" src="assets/sounds/cheers.mp3"></audio>
 
 <script>
 	var cut = document.getElementById("cut");
