play.yogome loginPack added, update, still other pages need to be updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <title>Play Yogome!</title>
   <!-- Bootstrap CSS CDN -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <link rel="stylesheet" href="assets/css/modal.css">
+   <link rel="stylesheet" href="css/modal.css">
    <!-- Our Custom CSS -->
    <link rel="stylesheet" href="assets/css/play.css">
    <!-- Slick Carousel CSS -->
@@ -422,12 +422,10 @@
                 </footer>
             </div>
         </div>
-    <div id="myModal"></div>
+    <div id="app"></div>
 <!--MODAL    -->
     <script src="js/languages.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/epic/data/epicCharacters.js"></script> 
-    <script src="js/epic/models/epicModel.js"></script>  
+    <script src="js/login.js"></script>
    <!-- jQuery Nicescroll CDN -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
    <script src="assets/js/play.js"></script>
@@ -435,9 +433,9 @@
         <script src="js/mixpanel/mixpanel.js"></script>
     <script src="js/mixpanel/main.js"></script>
     <!--menu actions    -->
-    <script src="assets/js/menuButtons.js"></script>
     <!--Main JS-->
     <script src="assets/js/main/mainPage.js"></script>
+    <script src="assets/js/menuButtons.js"></script>
 
     <script>
 
