loginModal, added to books and and minigames section

--- a/letsplay.html
+++ b/letsplay.html
@@ -28,7 +28,7 @@
     <!-- ****** favicons ****** -->      <title>Games</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <!-- Slick Carousel CSS -->
     <link rel="stylesheet" type="text/css" href="assets/plugins/slick/slick.css" />
@@ -240,12 +240,10 @@
         </footer>
     </div>
 </div>
-<div id="myModal"></div>
+<div id="app"></div>
 <!--MODAL    -->
 <script src="js/languages.js"></script>
-<script src="js/modal.js"></script>
-<script src="js/epic/data/epicCharacters.js"></script>
-<script src="js/epic/models/epicModel.js"></script>
+<script src="js/login.js"></script>
 <!-- jQuery Nicescroll CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
 
