--- a/yogobooks.html
+++ b/yogobooks.html
@@ -32,7 +32,7 @@
     <title class="text3">Books</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" type="text/css" href="assets/css/jquery-responsiveGallery.css">
 
     <!-- Our Custom CSS -->
@@ -42,8 +42,6 @@
 <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="application/javascript" ></script>
 	<script type="text/javascript" src="assets/js/jquery.responsiveGallery.js"></script>
-    <script src="js/epic/data/epicYogomeGames.js" type="text/javascript"></script>
-    <script src="epicweb/shared/minigames/js/helpers/yogomeGames.js" type="text/javascript"></script>  
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>  
@@ -256,25 +254,22 @@ $('.responsiveGallery-wrapper').responsiveGallery({
                     </div>
                 </div>
             </footer>
-    <div id="myModal"></div>
+    <div id="app"></div>
 <!--MODAL    -->
 
     <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/epic/data/epicCharacters.js"></script> 
-    <script src="js/epic/models/epicModel.js"></script>     
+    <script src="js/login.js"></script>
+    <script src="assets/js/yogobooks/book.js"></script>
     <script src="assets/js/menuButtons.js"></script>
 
 
     <!-- jQuery Nicescroll CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
-       <script src="assets/js/play.js"></script>
 
     
     <script src="js/mixpanel/mixpanel.js"></script>
     <script src="js/mixpanel/yogobooks.js"></script>
-    <script src="assets/js/yogobooks/book.js"></script>
     <script>
     $("#panelBooks").attr("src","assets/images/books/Panel" + language + ".png");
     </script>
