login on play.yogome videos section fix

--- a/webisodes.html
+++ b/webisodes.html
@@ -29,7 +29,7 @@
     <!-- ****** favicons ****** -->      <title>Videos</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-           <link rel="stylesheet" href="assets/css/modal.css">
+           <link rel="stylesheet" href="css/modal.css">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="assets/css/play.css">
     <link rel="stylesheet" href="assets/css/webisodes.css">
@@ -261,14 +261,12 @@
                 </footer>
             </div>
         </div>
-    <div id="myModal"></div>
+    <div id="app"></div>
     </body> 
 <!--MODAL    -->
     <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/epic/data/epicCharacters.js"></script> 
-    <script src="js/epic/models/epicModel.js"></script>  
+    <script src="js/login.js"></script>
     <script src="assets/js/play.js"></script>
        
     <!-- jQuery Nicescroll CDN -->
