webisodes js fix

--- a/webisodes.html
+++ b/webisodes.html
@@ -46,7 +46,7 @@
     <script src="assets/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="epicweb/shared/minigames/js/helpers/yogomeGames.js" type="text/javascript"></script>
     <script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflS50iB-/www-widgetapi.js" async=""></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <!--<script src="https://www.youtube.com/iframe_api"></script>-->
     <!--Detect language-->
     <script src="assets/js/detectlanguage.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
