--- a/webisodes.html
+++ b/webisodes.html
@@ -29,7 +29,7 @@
     <!-- ****** favicons ****** -->      <title>Videos</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-           <link rel="stylesheet" href="css/modal.css">
+           <link rel="stylesheet" href="assets/css/modal.css">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="assets/css/play.css">
     <link rel="stylesheet" href="assets/css/webisodes.css">
@@ -301,8 +301,12 @@ function getParameterByName(name, url) {
         if(detectOrigins){
             $(".webPageSection2").hide();
             $("nav").hide();
-            $(".bg-zip").addClass("newBg-zip");
+            //$(".bg-zip").addClass("newBg-zip");
         }
+//        else{
+//            $(".webPageSection2").show();
+//            $("nav").show();
+//        }
 
 
   function setVideoImage(){
