--- a/yogobooks.html
+++ b/yogobooks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
    
- <!-- ****** favicons ****** -->
+    <!-- ****** favicons ****** -->
      <link rel="shortcut icon" href="https://yogome.com/assets/favicon/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="https://yogome.com/assets/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="196x196" href="https://yogome.com/assets/favicon/favicon-192.png">
@@ -27,7 +27,12 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="https://yogome.com/assets/favicon/favicon-144.png">
     <meta name="msapplication-config" content="https://yogome.com/assets/favicon/browserconfig.xml">
-    <!-- ****** favicons ****** -->    
+    <meta property="og:url"             content="https://play.yogome.com/yogobooks.html" />
+    <meta property="og:type"            content="article" />
+    <meta property="og:title"           content="Yogome Books" />
+    <meta property="og:image"           content="https://play.yogome.com/banner_books.png" />
+    <meta property="og:description" content="Motivate your child to learn while having fun! Browse and play more than 2,000 curriculum-aligned learning games in 8 essential subjects. With the Yogome Learning Platform, your child has the support they need to improve their skills through educational apps, videos, games, and books.
+20 minutes a day are enough to improve your child’s development." />   
     
     <title class="text3">Books</title>
     <!-- Bootstrap CSS CDN -->
