--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <meta property="og:type"            content="article" />
     <meta property="og:title"           content="Play Yogome" />
     <meta property="og:image"           content="https://play.yogome.com/banner_PY.png" />
-    <meta property="og:description" content="Motivate your child to learn while having fun! Browse and play more than 2,000 curriculum-aligned learning games in 8 essential subjects. With the Yogome Learning Platform, your child has the support they need to improve their skills through educational apps, videos, games, and books.
-20 minutes a day are enough to improve your child’s development." />
+    <meta property="og:description" content="Encourage your child to learn while they have fun! Browse more than 2,000 activities in 8 fundamental subjects including educational apps, videos, games, and books. With the Yogome Learning Platform, your child will have the tools they need to succeed. Only 20 minutes a day can help improve your child’s social, emotional, and academic development. Start today!" />
     
     
     <!-- ****** favicons ****** -->  
