--- a/letsplay.html
+++ b/letsplay.html
@@ -25,7 +25,15 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="https://yogome.com/assets/favicon/favicon-144.png">
     <meta name="msapplication-config" content="https://yogome.com/assets/favicon/browserconfig.xml">
-    <!-- ****** favicons ****** -->      <title>Games</title>
+    <!-- ****** favicons ****** -->      
+    <meta property="og:url"             content="https://play.yogome.com/letsplay.html" />
+    <meta property="og:type"            content="article" />
+    <meta property="og:title"           content="Play Yogome" />
+    <meta property="og:image"           content="https://play.yogome.com/banner_PY.png" />
+    <meta property="og:description" content="Encourage your child to learn while they have fun! Browse more than 2,000 activities in 8 fundamental subjects including educational apps, videos, games, and books. With the Yogome Learning Platform, your child will have the tools they need to succeed. Only 20 minutes a day can help improve your child’s social, emotional, and academic development. Start today!" />
+    
+    
+    <title>Games</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/modal.css">
