new refactorization login added to play.yogome

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <div id="app"></div>
 <!--MODAL    -->
     <script src="js/languages.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/login.min.js"></script>
    <!-- jQuery Nicescroll CDN -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
    <script src="assets/js/play.js"></script>
