--- a/webisodes.html
+++ b/webisodes.html
@@ -275,7 +275,7 @@
 <!--MODAL    -->
     <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/login.min.js"></script>
     <script src="assets/js/play.js"></script>
        
     <!-- jQuery Nicescroll CDN -->
