--- a/yogobooks.html
+++ b/yogobooks.html
@@ -268,7 +268,7 @@ $('.responsiveGallery-wrapper').responsiveGallery({
 
     <script src="js/epic.js"></script>
     <script src="js/languages.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/login.min.js"></script>
     <script src="assets/js/yogobooks/book.js"></script>
 
     <script>
